<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*******************************************************************************
  ~  * Copyright, INDEPAY 2019 All rights reserved.
  ~  *
  ~  * The copyright in this work is vested in INDEPAY and the
  ~  * information contained herein is confidential.  This
  ~  * work (either in whole or in part) must not be modified,
  ~  * reproduced, disclosed or disseminated to others or used
  ~  * for purposes other than that for which it is supplied,
  ~  * without the prior written permission of INDEPAY.  If this
  ~  * work or any part hereof is furnished to a third party by
  ~  * virtue of a contract with that party, use of this work by
  ~  * such party shall be governed by the express contractual
  ~  * terms between the INDEPAY which is a party to that contract
  ~  * and the said party.
  ~  *
  ~  * Revision History
  ~  * Date           Who        Description
  ~  * 06-09-2019     Mayank D   Added file header
  ~  *
  ~  ******************************************************************************/
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:isScrollContainer="true"
    android:padding="16dp"
    tools:context=".mpin.MpinActivity">
    <LinearLayout
        android:id="@+id/llLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        >
        <!--<ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/common_google_signin_btn_text_dark" />-->
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/spl_card_details"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/spl_blue"
            android:textStyle="bold" />
        <!--<TextView
            android:id="@+id/txtSendSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/info_verify_card"
            android:textAppearance="?android:attr/textAppearanceSmall" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_shape"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:padding="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spl_debit_six"
                android:textAlignment="center"
                android:textColor="@color/spl_blue"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="12"
                    android:text="XXXX XXXX XX"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
                <EditText
                    android:id="@+id/edtFirstTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="2"
                    android:inputType="number"
                    android:singleLine="true"
                    android:hint="XX"
                    />
                <EditText
                    android:id="@+id/edtLastFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="4"
                    android:inputType="number"
                    android:singleLine="true"
                    android:hint="XXXX"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spl_expiry"
                android:textColor="@color/spl_blue"
                android:textAlignment="center"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <EditText
                    android:id="@+id/edtExpiryMM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="2"
                    android:inputType="number"
                    android:hint="XX"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="1"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:hint="/"/>
                <EditText
                    android:id="@+id/edtExpiryYY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="2"
                    android:inputType="number"
                    android:hint="XX"
                    android:singleLine="true"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tvEnterPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spl_card_pin"
                android:textColor="@color/spl_blue"
                android:textAlignment="center"
                android:gravity="center"/>
            <EditText
                android:id="@+id/edtCardPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:inputType="numberPassword"
                android:hint="XXXXXX"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:gravity="bottom"
            app:layout_constraintTop_toBottomOf="@+id/llLayout"
            app:layout_constraintBottom_toBottomOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvCountDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#224889"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="00:00"
                    android:padding="10dp"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/tvResendOtp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/spl_resend_otp"
                    android:layout_gravity="center"
                    android:textColor="@color/spl_black"
                    android:visibility="gone"
                    android:padding="10dp"/>
            </FrameLayout>
            <Button
                android:id="@+id/button_submit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/spl_blue"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/spl_continu"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/spl_white" />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>